update config info

--- a/public/pwa/manifest.json
+++ b/public/pwa/manifest.json
@@ -1,13 +1,13 @@
 {
     "name": "Portfolio for Developers Concept v2",
     "short_name": "Developer Portfolio",
-    "description": "A awesome portfolio template for developers",
-    "start_url": "https://developer-portfolio-v1.netlify.app/",
+    "description": "Roberto Teixeira | Mobile Engineer.",
+    "start_url": "https://robertoteixeira.netlify.app/",
     "display": "standalone",
     "orientation": "portrait",
     "background_color": "#010C15",
     "theme_color": "#010C15",
-    "scope": "https://developer-portfolio-v1.netlify.app/",
+    "scope": "https://robertoteixeira.netlify.app/",
     "icons": [{
         "src": "icons/icon48.png",
         "sizes": "48x48",
